// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile markdown to Slate Raw AST should compile a markdown ordered list 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H1",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "data": Object {
        "start": 1,
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "yo",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "bro",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "fro",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
      ],
      "type": "numbered-list",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile bulleted lists 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H1",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "data": Object {
        "start": null,
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "yo",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "bro",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "fro",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
      ],
      "type": "bulleted-list",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile code blocks 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "data": Object {
        "lang": "javascript",
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "var a = 1;",
            },
          ],
        },
      ],
      "type": "code",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile horizontal rules 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H1",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "isVoid": true,
      "kind": "block",
      "type": "thematic-break",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "blue moon",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile horizontal rules 2`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H1",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "isVoid": true,
      "kind": "block",
      "type": "thematic-break",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "blue moon",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile images 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "![super](duper.jpg)",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile inline code 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Word",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "This is some sweet ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "code",
                },
              ],
              "text": "inline code",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " yo!",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile kitchen sink example 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "An exhibit of Markdown",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "This note demonstrates some of what Markdown is capable of doing.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": "Note: Feel free to play with this page. Unlike regular notes, this doesn't
automatically save itself.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Basic formatting",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Paragraphs can be written like so. A paragraph is the basic block of Markdown.
A paragraph is what text will turn into when there is no reason it should
become anything else.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Paragraphs must be separated by a blank line. Basic formatting of ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": "italics",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " and
",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "bold",
                },
              ],
              "text": "bold",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " is supported. This ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": "can be ",
            },
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
                Object {
                  "type": "bold",
                },
              ],
              "text": "nested",
            },
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": " like",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " so.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Lists",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Ordered list",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
    Object {
      "data": Object {
        "start": 1,
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "Item 1 2. A second item 3. Number 3 4. Ⅳ",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
      ],
      "type": "numbered-list",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": "Note: the fourth item uses the Unicode character for Roman numeral four.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Unordered list",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
    Object {
      "data": Object {
        "start": null,
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "An item Another item Yet another item And there's more...",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
      ],
      "type": "bulleted-list",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Paragraph modifiers",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Code block",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
    Object {
      "data": Object {
        "lang": null,
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Code blocks are very useful for developers and other people who look at
code or other things that are written in plain text. As you can see, it
uses a fixed-width font.",
            },
          ],
        },
      ],
      "type": "code",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "You can also make ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "code",
                },
              ],
              "text": "inline code",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " to add code into other things.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Quote",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "data": undefined,
              "kind": "text",
              "leaves": Array [
                Object {
                  "text": "Here is a quote. What this is should be self explanatory. Quotes are
automatically indented when they are used.",
                },
              ],
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "quote",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Headings",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "There are six levels of headings. They correspond with the six levels of HTML
headings. You've probably noticed them already in the page. Each level down
uses one more hash character.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Headings ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": "can",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " also contain ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "bold",
                },
              ],
              "text": "formatting",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "They can even contain ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "code",
                },
              ],
              "text": "inline code",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Of course, demonstrating what headings look like messes up the structure of the
page.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "I don't recommend using more than three or four levels of headings here,
because, when you're smallest heading isn't too small, and you're largest
heading isn't too big, and you want each size up to look noticeably larger and
more important, there there are only so many sizes that you can use.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "URLs",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "URLs can be made in a handful of ways:",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "data": Object {
        "start": null,
      },
      "kind": "block",
      "nodes": Array [
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "A named link to MarkItDown. The easiest way to do these is to select what you",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": "want to make a link and hit ",
                    },
                  ],
                },
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "marks": Array [
                        Object {
                          "type": "code",
                        },
                      ],
                      "text": "Ctrl+L",
                    },
                  ],
                },
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": ".  Another named link to",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": Object {
                    "title": null,
                    "url": "http://www.markitdown.net/",
                  },
                  "kind": "inline",
                  "nodes": Array [
                    Object {
                      "data": undefined,
                      "kind": "text",
                      "leaves": Array [
                        Object {
                          "text": "MarkItDown",
                        },
                      ],
                    },
                  ],
                  "type": "link",
                },
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": " Sometimes you just want a URL like",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
        Object {
          "kind": "block",
          "nodes": Array [
            Object {
              "kind": "block",
              "nodes": Array [
                Object {
                  "data": Object {
                    "title": null,
                    "url": "http://www.markitdown.net/",
                  },
                  "kind": "inline",
                  "nodes": Array [
                    Object {
                      "data": undefined,
                      "kind": "text",
                      "leaves": Array [
                        Object {
                          "text": "http://www.markitdown.net/",
                        },
                      ],
                    },
                  ],
                  "type": "link",
                },
                Object {
                  "data": undefined,
                  "kind": "text",
                  "leaves": Array [
                    Object {
                      "text": ".",
                    },
                  ],
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "list-item",
        },
      ],
      "type": "bulleted-list",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Horizontal rule",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "A horizontal rule is a line that goes across the middle of the page.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "isVoid": true,
      "kind": "block",
      "type": "thematic-break",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "It's sometimes handy for breaking things up.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Images",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Markdown can also contain images. I'll need to add something here sometime.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Finally",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "There's actually a lot more to Markdown than this. See the official
introduction and syntax for more information. However, be aware that this is
not using the official implementation, and this might work subtly differently
  in some of the little things.",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile links 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Word",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "How far is it to ",
            },
          ],
        },
        Object {
          "data": Object {
            "title": null,
            "url": "https://google.com",
          },
          "kind": "inline",
          "nodes": Array [
            Object {
              "data": undefined,
              "kind": "text",
              "leaves": Array [
                Object {
                  "text": "Google",
                },
              ],
            },
          ],
          "type": "link",
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " land?",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile multiple header levels 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H1",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H2",
            },
          ],
        },
      ],
      "type": "heading-two",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H3",
            },
          ],
        },
      ],
      "type": "heading-three",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile nested inline markup 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "Word",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "This is ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "bold",
                },
              ],
              "text": "some ",
            },
            Object {
              "marks": Array [
                Object {
                  "type": "bold",
                },
                Object {
                  "type": "italic",
                },
              ],
              "text": "hot",
            },
            Object {
              "marks": Array [
                Object {
                  "type": "bold",
                },
              ],
              "text": " content",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "perhaps ",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "bold",
                },
              ],
              "text": "scalding",
            },
          ],
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": " even",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile plugins 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "![test](test.png)",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "{{< test >}}",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile simple markdown 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "H1",
            },
          ],
        },
      ],
      "type": "heading-one",
    },
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "sweet body",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`Compile markdown to Slate Raw AST should compile soft breaks (double space) 1`] = `
Object {
  "kind": "block",
  "nodes": Array [
    Object {
      "kind": "block",
      "nodes": Array [
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "blue moon",
            },
          ],
        },
        Object {
          "kind": "inline",
          "nodes": Array [
            Object {
              "data": undefined,
              "kind": "text",
              "leaves": Array [
                Object {
                  "text": "
",
                },
              ],
            },
          ],
          "type": "break",
        },
        Object {
          "data": undefined,
          "kind": "text",
          "leaves": Array [
            Object {
              "text": "footballs",
            },
          ],
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
